# mcp

./: .dockerignore  .env.phase3.example  .gitignore  ATOMS_MCP_PHASE1_IMPLEMENTATION.md  DEPLOYMENT_SUMMARY.md  Dockerfile  PHASE2_CONFIGURATION.md  PHASE2_IMPLEMENTATION_SUMMARY.md  README.md  TRACEABILITY_PROBLEM_ANALYSIS.md  docker-compose.prod.yml  docker-compose.yml  how_to_show_tree_view.md  mcp.json  mcp_cfg.yaml  mcp_server.py  mcp_suggestion.md  pyproject.toml  requirements.txt  test_all_traceability.py  test_phase2.py  test_traceability.py  traceability_mcp.md
.github/workflows/: ci-cd.yml
DB/: Atoms_Schema.md  Schema_Suggestion_Traceability.md  supabase_database_schema_analysis.md
config/: __init__.py  settings.py
examples/: basic_usage.py  direct_server_test.py  production_example.py  supabase_oauth_setup.py  with_authentication.py
llm/: __init__.py  gemini_2.5_flash.py  gemini_2_5_flash.py
monitoring/loki/: config.yml
monitoring/prometheus/: prometheus.yml
monitoring/promtail/: config.yml
scripts/: cursor_mcp_http_server.py  cursor_mcp_server.py  local_mcp_server.py  setup_environment.py  test_setup.py
src/toolbox_integration/: __init__.py  auth.py  client.py  utils.py
supabase_client/: client.py
tests/: test_auth.py  test_client.py
tools/: __init__.py  analyze_doc_tool.py  calculate_bmi_tool.py  calculate_sum_tool.py  core && cp CUserssongjOneDriveDesktopmcptoolspull_members_tool.py CUserssongjOneDriveDesktopmcptoolscore  create_test_requirement_tool.py  create_trace_link_tool.py  execute_requirement_test_tool.py  get_compliance_report_tool.py  get_documents_by_projects_tool.py  get_project_health_tool.py  get_requirement_metrics_tool.py  get_test_matrix_tool.py  get_trace_analysis_tool.py  mail_to_tool.py  milestone_tracking_tool.py  progress_reporting_tool.py  pull_documents_tool.py  pull_members_tool.py  pull_organization_tool.py  pull_projects_tool.py  task_assign_tool.py  traceability_generate_matrix_tool.py  traceability_get_all_trees_tool.py  traceability_get_tree_tool.py  traceability_query_hierarchy_tool.py  traceability_search_for_linking_tool.py  traceability_validate_cycle_tool.py  validate_trace_links_tool.py
tools/core/: pull_projects_tool.py
tools/database/: analytics_tool.py  natural_query_tool.py
(+20 files in other folders)
